--- a/lighthouse.css
+++ b/lighthouse.css
@@ -2,8 +2,14 @@ body {background-color: #00005d;
 	 font-family: Verdana, Arial, sans-serif;
 	 }
 header {background-color: #869dc7;
+    height: 150px;
+    margin-bottom: 0px;
+    background-image: url(images/lighthousebanner.jpg);
+    background-repeat: no-repeat;
 }
-h1 {
+h1 { text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
 	}
 h2 {color: #869dc7;
 	font-family: Arial, sans-serif;
@@ -16,26 +22,41 @@ footer {font-size: 70%;
 	  }
 #wrapper {margin: 0 auto;
 		 width: 80%;
+        min-width: 960px;
+        max-width: 1200px;
 		 background-color: #b3c7e6;
 		 color: #000066;
 		 }
 nav { font-weight: bold;
 	 letter-spacing: 0.1em;
+    float: right;
+    width: 200px;
 	 }
 nav ul {list-style-type: none;
+        margin: 0px;
+        padding: 0px;
 	  }
 nav a{
 	  background-color: #b3c7e6;
 	  border-bottom: 1px solid #ffffff;
+    text-decoration: none;
+    padding: 20px;
+    display: block;
 	  }
+nav a:link{color: #ffffff;}
+nav a:vistited{color: #ddd9d9;}
+nav a:hover{color: #869dc7;
+            background-color: #ddd9d9;
+}
 h3 {margin-bottom: 0px;}
 
 main {background-color: #ffffff;
 	 color: #000000;
 	 padding: 20px 20px;
+    overflow: auto;
 	 }
 main ul{list-style-type: none;}
-main li{
+main li{display: inline-block;
 	  width: 225px;
 	  padding-bottom: 10px;
 	  margin: 10px;
@@ -44,7 +65,13 @@ main li{
 	  font-style: italic;
 	  font-family: Georgia, serif;
 	}
-aside {
+main p {position: relative;
+        left: 20px;
+}
+aside { float: right;
+    position: relative;
+    top: -40px;
+    margin-right: 40px;
 	 width: 200px;
 	 background-color: #eaeaea;
 	 padding: 20px;
@@ -64,5 +91,6 @@ article header {background-color: #ffffff;
 		  text-align: right;
 		  font-style: italic;
 		  }
-#floatright {
+#floatright { float: right;
+            margin: 15px;
 			 }
